# total-viewsheds

./: .gitignore  AuxFunc.cpp  AuxFunc.h  Cargo.toml  Defs.h  LICENSE-MIT  LatLong-UTMconversion.h  LinkedList.cpp  LinkedList.h  Makefile  README.md  Sector.cpp  Sector.h  clippy.toml  constants.h  earth.cpp  main.cpp  makefile  notes.md  portishead-benchmark.bt  precomp.cpp  readme  อาคาร
.github/workflows/: ci.yaml
crates/shader/: Cargo.toml  total_viewsheds_kernel.spv
crates/shader/src/: kernel.rs  lib.rs
crates/total-viewsheds/: Cargo.toml
crates/total-viewsheds/src/: angles.cu  axes.rs  band_of_sight.rs  cache.rs  compute.rs  config.rs  cuda.rs  dem.rs  gpu.rs  input.rs  kernel.rs  main.rs  max.cu
crates/total-viewsheds/src/output/: ascii.rs  png.rs
etc/input/: mockDEM.bil
src/: Axes.cpp  Axes.h  BOS.cpp  BOS.h  Clamp.cpp  Clamp.h  Compute.cpp  Compute.h  DEM.cpp  DEM.h  LinkedList.cpp  LinkedList.h  Output.cpp  Output.h  Sector.cpp  Sector.h  SectorAxes.cpp  SectorAxes.h  Viewsheds.cpp  Viewsheds.h  axes.rs  band_of_sight.rs  compute.rs  config.rs  definitions.cpp  definitions.h  dem.rs  helper.cpp  helper.h  kernel.rs  main.cpp  main.rs  viewshed.cl
test/: af_viewshed_tests.cpp  axes_test.cpp  basic_viewshed_tests.cpp  bos_test.cpp  dem_tests.cpp  fixtures.h  gpu_viewsheds_tests.cpp  helper.cpp  helper.h  main.cpp  sweep_test.cpp  total_viewshed_tests.cpp  tvs_png_test.cpp
