[package]
name = "total-viewsheds"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[dependencies]
bytemuck = "1.22.0"
clap = { version = "4.5.42", features = ["derive"] }
color-eyre = "0.6.5"
image = { version = "0.25.6", default-features = false, features = ["png"] }
pollster = "0.4"
srtm_reader = "0.5.1"
total-viewsheds-kernel = { path = "../shader"}
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "ansi"] }
wgpu = { version = "25", features = ["spirv"] }

[lints]
workspace = true

