[package]
name = "total-viewsheds"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[dependencies]
bytemuck = "1.22.0"
clap = { version = "4.5.42", features = ["derive"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
geo = "0.30.0"
image = { version = "0.25.6", default-features = false, features = ["png"] }
pollster = "0.4"
total-viewsheds-kernel = { path = "../shader"}
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "ansi"] }
wgpu = { version = "25", features = ["spirv"] }
radsort = "0.1.1"
cudarc = { version = "0.17.2", features = ["cuda-13000"] }

[dev-dependencies]
tempfile = "3.20.0"

[lints]
workspace = true


